--- a/Source/FNA.NET.Shapes.csproj
+++ b/Source/FNA.NET.Shapes.csproj
@@ -15,6 +15,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <NoWarn>1591</NoWarn>
+
+    <VersionPrefix>0.2.3</VersionPrefix>
+    <VersionSuffix></VersionSuffix>
   </PropertyGroup>
 
   <ItemGroup>
